Fix alignment issue in Firefox

--- a/src/assets/sass/modules/_layout.scss
+++ b/src/assets/sass/modules/_layout.scss
@@ -118,6 +118,7 @@ body {
     background-color: #222222;
     color: #ffe7ac;
     font-family: $font-sans-serif;
+    vertical-align: top;
 
     a {
         color: #ffe7ac;
